finalised coding for html and css files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title> ⭐ About Me ⭐ </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <h6> Hellooo! I am Norah ✨ </h6>
+    <h4> hover over the questions below to get to know me!😊</h4>
+    <div class="container">
+        <div class="hover-box one">
+            <div class="question">
+                Where am I from?
+            </div>
+            <div class="hover-content">
+                <p>Jeddah, Saudi Arabia </p>
+            </div>
+        </div>
+
+        <div class="hover-box two">
+            <div class="question">
+                Which university will I be attending this fall?
+            </div>
+            <div class="hover-content">
+                <p>UBC</p>
+            </div>
+        </div>
+
+        <div class="hover-box three">
+            <div class="question">
+                What's my zodiac sign?
+            </div>
+            <div class="hover-content">
+                <p>Aries </p>
+            </div>
+        </div>
+    </div>
+
+    <h6 class="heading-one"> Fun facts to know about me!</h6>
+    <div class="list">
+        <ul> 
+            <li>I am a huge fan of reading! My favorite book series is the Housemaid series!!</li>
+            <li> I have a cat. His breed is persian and his name is Leo!</li>
+            <li>I am an ambivert and very outgoing when it comes to meeting people!!</li>
+        </ul>
+    </div>
+
+    
+    <h6 class="heading-two"> 👀 Connect with me 👋</h6>
+    <div class="socials">
+        <a href="www.linkedin.com/in/norahalowibdi">Linkdin</a>
+        <a href="https://github.com/SweetnSour2">Github</a>
+    </div>
+    
+
+</body>
+</html>
 
